# cookiecutter-python-cmd2

./: .gitignore  Makefile  README.md  README.rst  cookiecutter.json  noxfile.py  requirements_dev.txt  setup.py
.github/ISSUE_TEMPLATE/: -u0001f680-feature-request.md  bug_report.md  feature-request.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: Makefile  README.rst  noxfile.py  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: python-app.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  app.py  app_cmd_args.py  arg_decorators.py  environment.py  internal_plugin.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/common/: screen.py  settable.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/plugins/: __init__.py  fruits.py  plugin_one.py  vegetables.py
{{cookiecutter.project_slug}}/tests/functional/: test_functional.py
