[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/{{ cookiecutter.project_slug }}/_version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
